force-app/main/default/objects/SFMC_API_EVENT__mdt/SFMC_API_EVENT__mdt.object-meta.xml
<CustomObject>
    <label>SFMC API EVENT</label>
    <pluralLabel>SFMC API EVENTS</pluralLabel>
</CustomObject>