force-app/main/default/objects/SFMC_API_EVENT__mdt/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <label>AccountID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>