force-app/main/default/objects/SFMC_API_EVENT__mdt/fields/AuthenticationBaseURI__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationBaseURI__c</fullName>
    <label>AuthenticationBaseURI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>