force-app/main/default/objects/SFMC_API_EVENT__mdt/fields/eventKey__c.field-meta.xml
<CustomField>
    <fullName>eventKey__c</fullName>
    <label>eventKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>