force-app/main/default/objects/SFMC_API_EVENT__mdt/fields/restBaseURL__c.field-meta.xml
<CustomField>
    <fullName>restBaseURL__c</fullName>
    <label>restBaseURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>